styles.css
:root {
  --color-grey: #9597a5;
  --color-black: #2d314d;
  --color-main: #30c88f;
  --color-white: #fff;
  --color-grey-light: #f4f5f7;
}

html {
  font-size: 62.5%;
}

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: "Public Sans", sans-serif;
}

img {
  width: 100%;
  height: 100%;
}

figure,
picture {
  display: block;
}

button {
  border: none;
}

a {
  text-decoration: none;
  color: inherit;
}

/* styling main nav */
.nav {
  background: linear-gradient(
    180deg,
    #2d314d 0%,
    rgba(45, 49, 77, 0.0001) 100%
  );
  position: absolute;
  top: 64px;
  left: -100vw;
  width: 100vw;
  height: 100vh;
  padding: 24px;
}

.nav .links {
  background-color: var(--color-white);
}

.nav a {
  display: block;
  padding: 12px 0px;
}

.typography-links {
  font-size: 1.8rem;
  font-weight: 400;
  letter-spacing: -0.014rem;
}

/* .nav a {
  background-color: var(--color-white);
  padding: 12px 130px;
  width: 100%;
} */

.header {
  display: flex;
  padding: 22px 24px;
  justify-content: space-between;
  align-items: center;
  background-color: var(--color-white);
  position: relative;
  z-index: 100;
}

.flex-column {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.header .logo {
  height: 20px;
}

.header .button {
  display: none;
}

/* initializing main section  */

.move-top {
  position: relative;
  top: -115px;
}

.main-container {
  background-image: url("./statics/bg-intro-mobile.svg");
  background-repeat: no-repeat;
  padding-bottom: 88px;
}

.main-section {
  text-align: center;
  letter-spacing: -0.071rem;
}

.main-section .paragraph {
  margin-bottom: 32px;
}

.main__picture {
  width: 327px;
  height: 402px;
}

.main__title {
  font-size: 4rem;
  font-weight: 300;
  color: var(--color-black);
  margin-top: 41px;
  margin-bottom: 16px;
}

.paragraph {
  font-size: 1.5rem;
  font-weight: 400;
  color: var(--color-grey);
  letter-spacing: -0.023rem;
  line-height: 2.5rem;
}

.font-bold {
  font-size: 1.4rem;
  line-height: 2.8rem;
  font-weight: bold;
}

.button {
  background: linear-gradient(135deg, #33d35e 0%, #2ab6d9 99.58%);
  border-radius: 22px;
  color: var(--color-white);
  padding: 0.8rem 3.4rem;
}

.section-2 {
  background-color: var(--color-grey-light);
  align-items: center;
  padding: 64px 22px;
  text-align: center;
}

.section-2 .header2 {
  margin-bottom: 14px;
}

.header3 {
  font-size: 2rem;
  letter-spacing: -0.036rem;
  line-height: 2.8rem;
  font-weight: 300;
}

.articles {
  gap: 32px;
  margin-top: 56px;
}

.article1 {
  align-items: center;
  gap: 16px;
}
.article1 picture {
  width: 72px;
  margin-bottom: 8px;
}

.header2 {
  font-size: 3.2rem;
  letter-spacing: -0.057rem;
  font-weight: 300;
}

.section3 {
  padding: 88px 24px;
}

.section3 .header2 {
  margin-bottom: 31px;
}

.article2 picture {
  height: 200px;
}

.article2 .content {
  padding: 24px 31px;
  align-items: flex-start;
  gap: 8px;
}

.article2 h4 {
  font-size: 1rem;
  letter-spacing: -0.016rem;
  line-height: 1.8rem;
  font-weight: 400;
  color: var(--color-grey);
}

.article2 h3 {
  font-size: 1.6rem;
  line-height: 2rem;
  letter-spacing: -0.029rem;
  font-weight: 300;
  color: var(--color-black);
}

.article2 p {
  font-size: 1.3rem;
  line-height: 1.8rem;
  letter-spacing: -0.02rem;
  font-weight: 400;
  color: var(--color-grey);
}

.footer {
  background-color: var(--color-black);
  padding: 40px 77.5px;
  gap: 32px;
}
.icons {
  display: flex;
  gap: 16px;
}

.footer .icons figure {
  width: 24px;
  height: 24px;
}

.footer nav.flex-column {
  gap: 8px;
  color: var(--color-white);
}

.footer .paragraph {
  margin-top: -8px;
}

